Added basic styles

--- a/contact-me.html
+++ b/contact-me.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Umesh U</title>
+    <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
     <h3>Contact Me</h3>
     <p>Mail ID: <a href="mailto:umeshulive@gmail.com?subject=Hello" style="text-decoration: none">umeshulive@gmail.com</a></p>
     <p>Mobile Number: <a href="tel:7550168757" style="text-decoration: none">+91 755 016 8757</a></p>
-    <hr size="3" noshade>
+    <hr>
     <h3>Leave me a Message</h3>
     <form class="" action="mailto:joe@example.com?subject=Hello" method="post" enctype="text/plain">
       <table>
