--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 <head>
   <meta charset="utf-8">
   <title>Umesh U</title>
+  <link rel="stylesheet" href="./css/master.css">
 </head>
 
 <body>
-  <img src="https://pbs.twimg.com/profile_images/1053632703101198337/1OkuFsZX_400x400.jpg" alt="umesh u profile pic" style="width: 100px; height: 100px; border-radius: 50%">
-  <h1>Umesh U</h1>
-  <p>I'am a Frontend Developer</p>
-  <hr size="3" noshade>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="https://pbs.twimg.com/profile_images/1053632703101198337/1OkuFsZX_400x400.jpg" alt="umesh u profile pic" style="width: 100px; height: 100px; border-radius: 50%"></td>
+      <td>
+        <h1>Umesh U</h1>
+        <p>I'am a Frontend Developer</p>
+      </td>
+  </tr>
+  </table>
+  <hr size="3">
   <h3>About Me</h3>
   <p>Energetic software engineer with <em>2+ years</em> experience developing robust code for high-volume
     businesses.Supportive and enthusiastic team player dedicated to streamlining processes and effectively
@@ -32,7 +39,7 @@
     </tbody>
   </table>
 </body>
-<hr size="3" noshade>
+<hr size="3">
 <h3>Skills</h3>
 <table>
   <tr>
@@ -52,6 +59,6 @@
     <td>&#9733 &#9733 &#9733 &#9733 &#9733</td>
   </tr>
 </table>
-<hr size="3" noshade>
+<hr size="3">
 <a href="contact-me.html">Contact Me</a>
 </html>
